# A11yScope

./: .dockerignore  .env.example  .gitignore  CLA.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  TRADEMARKS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: zap-rules.tsv
.github/workflows/: ci.yml  dast.yml  security.yml
docs/: faq.md  getting-started.md  how-to-guides.md  use-cases.md
docs/plans/: 2026-03-02-rename-a11yscope-design.md  2026-03-02-scan-dashboard-implementation.md  2026-03-02-scan-dashboard-ux-design.md
src/a11yscope/: __main__.py  cli.py  config.py  crypto.py
src/a11yscope/ai/: __init__.py  anthropic_provider.py  google_provider.py  grok_provider.py  openai_provider.py  registry.py
src/a11yscope/audit_log/: logger.py  schemas.py
src/a11yscope/auth/: dependencies.py  jwt.py  oidc.py  saml.py
src/a11yscope/canvas/: client.py  (+3 more)
src/accessiflow/: __main__.py  cli.py  config.py
src/canvas_a11y/: __main__.py  cli.py  config.py  models.py
tests/: conftest.py  test_ai_providers.py  test_ai_remediator.py  test_autofix.py  test_canvas_client.py  test_contrast_check.py  test_course_metadata.py  test_crypto.py  test_db_models.py  test_html_checks.py  test_key_routes.py  test_media_checks.py  test_models.py  test_queue_execution.py  test_queue_manager.py  test_rate_limit.py  test_registry.py  test_scan_routes.py  test_scan_ws.py  test_scoring.py  test_standards.py  test_vpat_report.py
tests/e2e/: conftest.py  test_ai_routes.py  test_config_validation.py  test_health.py  test_security.py  test_vpat_download.py  test_websocket.py
(+130 files in other folders)
